# letterboxd-etl

./: README.md  pyproject.toml
letterboxd_etl/: constants.py  extract.py  load.py  transform.py
scripts/: run_etl.py
